// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Tooltip renders correctly > with data-testid 1`] = `
<body>
  <div>
    <div
      class=""
    />
  </div>
  <span
    class="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden="false"
    data-testid="test"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="contentComponent top hasTooltip expandAppear expandAppearActive"
    >
      <div
        class="tooltip dark"
      >
        <div
          class="content"
        >
          test
        </div>
      </div>
      <div
        class="arrow arrow dark"
        data-placement="top"
        style="position: absolute;"
      />
    </div>
  </span>
</body>
`;

exports[`Tooltip renders correctly > with hideWhenReferenceHidden 1`] = `
<body>
  <div>
    <div
      class=""
    />
  </div>
  <span
    class="monday-style-dialog-content-wrapper contentWrapper"
    data-testid="tooltip"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="contentComponent top hasTooltip expandAppear expandAppearActive"
    >
      <div
        class="tooltip dark"
      >
        <div
          class="content"
        >
          test
        </div>
      </div>
      <div
        class="arrow arrow dark"
        data-placement="top"
        style="position: absolute;"
      />
    </div>
  </span>
</body>
`;

exports[`Tooltip renders correctly > with position 1`] = `
<body>
  <div>
    <div
      class=""
    />
  </div>
  <span
    class="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden="false"
    data-testid="tooltip"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="contentComponent left hasTooltip expandAppear expandAppearActive"
    >
      <div
        class="tooltip dark"
      >
        <div
          class="content"
        >
          test
        </div>
      </div>
      <div
        class="arrow arrow dark"
        data-placement="left"
        style="position: absolute;"
      />
    </div>
  </span>
</body>
`;

exports[`Tooltip renders correctly > with style 1`] = `
<body>
  <div>
    <div
      class=""
    />
  </div>
  <span
    class="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden="false"
    data-testid="tooltip"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="contentComponent top hasTooltip expandAppear expandAppearActive"
    >
      <div
        class="tooltip dark"
        style="width: 200px;"
      >
        <div
          class="content"
        >
          test
        </div>
      </div>
      <div
        class="arrow arrow dark"
        data-placement="top"
        style="position: absolute;"
      />
    </div>
  </span>
</body>
`;

exports[`Tooltip renders correctly > with theme 1`] = `
<body>
  <div>
    <div
      class=""
    />
  </div>
  <span
    class="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden="false"
    data-testid="tooltip"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="contentComponent top hasTooltip expandAppear expandAppearActive"
    >
      <div
        class="tooltip primary"
      >
        <div
          class="content"
        >
          test
        </div>
      </div>
      <div
        class="arrow arrow primary"
        data-placement="top"
        style="position: absolute;"
      />
    </div>
  </span>
</body>
`;

exports[`Tooltip renders correctly > with withoutDialog 1`] = `
<div
  class="tooltip dark"
>
  <div
    class="content"
  >
    test
  </div>
</div>
`;

exports[`Tooltip renders correctly > without arrow 1`] = `
<body>
  <div>
    <div
      class=""
    />
  </div>
  <span
    class="monday-style-dialog-content-wrapper contentWrapper"
    data-popper-reference-hidden="false"
    data-testid="tooltip"
    style="position: absolute; left: 0px; top: 0px;"
  >
    <div
      class="contentComponent top expandAppear expandAppearActive"
    >
      <div
        class="tooltip dark"
      >
        <div
          class="content"
        >
          test
        </div>
      </div>
    </div>
  </span>
</body>
`;
